--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 #configuring debug mode
-logging.level.org.springframework=debug
+#logging.level.org.springframework=debug
+#spring.security.user.name = user
+#spring.security.user.password=password
+
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
